[tool.poetry]
name = "quarts"
version = "1.0.0"
description = ""
authors = ["iwatos <nonbiriactive@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "5.1.1"
mkdocs = "1.1"
mkdocs-roamlinks-plugin = "*"
mkdocs-exclude = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
